--- a/TP2_ISD_SA2023.ipynb
+++ b/TP2_ISD_SA2023.ipynb
@@ -663,7 +663,7 @@
     "\n",
     "(1 point)\n",
     "\n",
-    "*Réponse:*"
+    "*Réponse:* On peut conclure qu'il n'y a pas de données manquantes dans le dataframe, car chaque pays a 12 données (une par année) et chaque année a 142 données (une par pays). (12 * 142 = 1'704)"
    ]
   },
   {
@@ -681,34 +681,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "29f5d97d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Asia', 'Europe', 'Africa', 'Americas', 'Oceania'], dtype=object)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Écrivez votre code ici. Note: une seule ligne suffit par colonne. Affichez vos résultats dans des cellules différentes.  \n",
     "\n",
-    "# Continent\n"
+    "# Continent\n",
+    "df[\"continent\"].unique()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "b9ac93de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Afghanistan', 'Albania', 'Algeria', 'Angola', 'Argentina',\n",
+       "       'Australia', 'Austria', 'Bahrain', 'Bangladesh', 'Belgium',\n",
+       "       'Benin', 'Bolivia', 'Bosnia and Herzegovina', 'Botswana', 'Brazil',\n",
+       "       'Bulgaria', 'Burkina Faso', 'Burundi', 'Cambodia', 'Cameroon',\n",
+       "       'Canada', 'Central African Republic', 'Chad', 'Chile', 'China',\n",
+       "       'Colombia', 'Comoros', 'Congo, Dem. Rep.', 'Congo, Rep.',\n",
+       "       'Costa Rica', \"Cote d'Ivoire\", 'Croatia', 'Cuba', 'Czech Republic',\n",
+       "       'Denmark', 'Djibouti', 'Dominican Republic', 'Ecuador', 'Egypt',\n",
+       "       'El Salvador', 'Equatorial Guinea', 'Eritrea', 'Ethiopia',\n",
+       "       'Finland', 'France', 'Gabon', 'Gambia', 'Germany', 'Ghana',\n",
+       "       'Greece', 'Guatemala', 'Guinea', 'Guinea-Bissau', 'Haiti',\n",
+       "       'Honduras', 'Hong Kong, China', 'Hungary', 'Iceland', 'India',\n",
+       "       'Indonesia', 'Iran', 'Iraq', 'Ireland', 'Israel', 'Italy',\n",
+       "       'Jamaica', 'Japan', 'Jordan', 'Kenya', 'Korea, Dem. Rep.',\n",
+       "       'Korea, Rep.', 'Kuwait', 'Lebanon', 'Lesotho', 'Liberia', 'Libya',\n",
+       "       'Madagascar', 'Malawi', 'Malaysia', 'Mali', 'Mauritania',\n",
+       "       'Mauritius', 'Mexico', 'Mongolia', 'Montenegro', 'Morocco',\n",
+       "       'Mozambique', 'Myanmar', 'Namibia', 'Nepal', 'Netherlands',\n",
+       "       'New Zealand', 'Nicaragua', 'Niger', 'Nigeria', 'Norway', 'Oman',\n",
+       "       'Pakistan', 'Panama', 'Paraguay', 'Peru', 'Philippines', 'Poland',\n",
+       "       'Portugal', 'Puerto Rico', 'Reunion', 'Romania', 'Rwanda',\n",
+       "       'Sao Tome and Principe', 'Saudi Arabia', 'Senegal', 'Serbia',\n",
+       "       'Sierra Leone', 'Singapore', 'Slovak Republic', 'Slovenia',\n",
+       "       'Somalia', 'South Africa', 'Spain', 'Sri Lanka', 'Sudan',\n",
+       "       'Swaziland', 'Sweden', 'Switzerland', 'Syria', 'Taiwan',\n",
+       "       'Tanzania', 'Thailand', 'Togo', 'Trinidad and Tobago', 'Tunisia',\n",
+       "       'Turkey', 'Uganda', 'United Kingdom', 'United States', 'Uruguay',\n",
+       "       'Venezuela', 'Vietnam', 'West Bank and Gaza', 'Yemen, Rep.',\n",
+       "       'Zambia', 'Zimbabwe'], dtype=object)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Country\n"
+    "# Country\n",
+    "df[\"country\"].unique()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "176b5a78",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1952, 1957, 1962, 1967, 1972, 1977, 1982, 1987, 1992, 1997, 2002,\n",
+       "       2007])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Year\n"
+    "# Year\n",
+    "df[\"year\"].unique()\n"
    ]
   },
   {
@@ -983,7 +1048,7 @@
    "id": "bba767b7",
    "metadata": {},
    "source": [
-    "*Réponse:*"
+    "*Réponse:* "
    ]
   },
   {
