--- a/TP2_ISD_SA2023.ipynb
+++ b/TP2_ISD_SA2023.ipynb
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 77,
    "id": "ab4ac8d1",
    "metadata": {},
    "outputs": [
@@ -1562,7 +1562,7 @@
        "2007       929539692  898871184  3811953827  586098529  24549947"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1605,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 73,
    "id": "f8396840",
    "metadata": {},
    "outputs": [
@@ -1623,7 +1623,7 @@
        "Text(0.5, 0.98, 'Scatter plot with life expectancy by gdpPercap by country for 1952 and 2007')"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1713,6 +1713,8 @@
     "- Y a-t-il une donnée particulière, une information manquante ?\n",
     "\n",
     "\n",
+    "\n",
+    "\n",
     "N'hésitez pas à ajouter des cellules de code ou de Markdown pour vérifier et expliquer vos conclusions. Condencez vos remarques dans la cellule ci-dessous en complétant après le \"Réponse:\". \n"
    ]
   },
@@ -1721,7 +1723,14 @@
    "id": "77f87d59",
    "metadata": {},
    "source": [
-    "*Réponses:*"
+    "*Réponses:*\n",
+    "- Le principal message transmi est que de manière générale, l'espérance de vie a augmenté en 55 ans, et que la population a également augmenté partout dans le monde. En revanche on observe des écarts quant à l'évolution du PIB par habitant, qui est nettement plus marquée en Europe et en Amérique du Nord qu'ailleurs.\n",
+    "\n",
+    "- Sur ce graphique, on peut trouver l'évolution de l'espérance de vie, du PIB par habitant et de la population de chaque pays entre 1952 et 2007.\n",
+    "\n",
+    "- Ce graphique est interessant, il arrive a bien montrer une évolution car on saisit un pattern de \"déplacement\" des points entre 1952 et 2007,cependant à notre avis il faudrait rajouter des informations pour le rendre plus pertinent, à savoir par exemple le nom de chaque pays associé au scatter correspondant (nom ou numéro pour points trop petits). Il faudrait aussi rajouter une échelle pour la taille des points, car pour l'instant on ne sait pas vraiment ce que représente leur taille. La proximité des points rend également le graphe difficile à lire.\n",
+    "\n",
+    "\n"
    ]
   },
   {
